--- a/ZTM Vue Course Code/Section 9/music-9-22-COMPLETED/template/index.html
+++ b/ZTM Vue Course Code/Section 9/music-9-22-COMPLETED/template/index.html
@@ -1,4 +1,22 @@
-<template>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+  <title>Music Template</title>
+
+  <!-- CSS -->
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" 
+    crossorigin="anonymous" />
+  <link href="assets/css/main.css" rel="stylesheet" />
+</head>
+
+<body class="bg-gray-100 font-sans pb-24">
   <!-- Header -->
   <header id="header" class="bg-gray-700">
     <nav class="container mx-auto flex justify-start items-center py-5 px-4">
@@ -22,25 +40,23 @@
 
   <!-- Introduction -->
   <section class="mb-8 py-20 text-white text-center relative">
-    <div
-      class="absolute inset-0 w-full h-full bg-contain introduction-bg"
-      style="background-image: url(assets/img/header.png)"
-    ></div>
+    <div class="absolute inset-0 w-full h-full bg-contain introduction-bg"
+      style="background-image: url(assets/img/header.png)"></div>
     <div class="container mx-auto">
       <div class="text-white main-header-content">
         <h1 class="font-bold text-5xl mb-5">Listen to Great Music!</h1>
         <p class="w-full md:w-8/12 mx-auto">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et dolor mollis, congue
-          augue non, venenatis elit. Nunc justo eros, suscipit ac aliquet imperdiet, venenatis et
-          sapien. Duis sed magna pulvinar, fringilla lorem eget, ullamcorper urna.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Phasellus et dolor mollis, congue augue non, venenatis elit.
+          Nunc justo eros, suscipit ac aliquet imperdiet, venenatis et
+          sapien. Duis sed magna pulvinar, fringilla lorem eget,
+          ullamcorper urna.
         </p>
       </div>
     </div>
 
-    <img
-      class="relative block mx-auto mt-5 -mb-20 w-auto max-w-full"
-      src="./src/assets/img/introduction-music.png"
-    />
+    <img class="relative block mx-auto mt-5 -mb-20 w-auto max-w-full"
+      src="assets/img/introduction-music.png" />
   </section>
 
   <!-- Main Content -->
@@ -48,14 +64,12 @@
     <div class="bg-white rounded border border-gray-200 relative flex flex-col">
       <div class="px-6 pt-6 pb-5 font-bold border-b border-gray-200">
         <span class="card-title">Songs</span>
-        <!-- Icon -->
-        <i class="fa fa-headphones-alt float-right text-green-400 text-xl"></i>
+        <i class="fa fa-headphones-alt float-right text-green-400 text-2xl"></i>
       </div>
       <!-- Playlist -->
       <ol id="playlist">
-        <li
-          class="flex justify-between items-center p-3 pl-6 cursor-pointer transition duration-300 hover:bg-gray-50"
-        >
+        <li class="flex justify-between items-center p-3 pl-6 cursor-pointer transition 
+          duration-300 hover:bg-gray-50">
           <div>
             <a href="#" class="font-bold block text-gray-600">Song Title</a>
             <span class="text-gray-500 text-sm">Artist Name</span>
@@ -68,9 +82,8 @@
             </span>
           </div>
         </li>
-        <li
-          class="flex justify-between items-center p-3 pl-6 cursor-pointer transition duration-300 hover:bg-gray-50"
-        >
+        <li class="flex justify-between items-center p-3 pl-6 cursor-pointer transition 
+          duration-300 hover:bg-gray-50">
           <div>
             <a href="#" class="font-bold block text-gray-600">Song Title</a>
             <span class="text-gray-500 text-sm">Artist Name</span>
@@ -83,9 +96,8 @@
             </span>
           </div>
         </li>
-        <li
-          class="flex justify-between items-center p-3 pl-6 cursor-pointer transition duration-300 hover:bg-gray-50"
-        >
+        <li class="flex justify-between items-center p-3 pl-6 cursor-pointer transition 
+          duration-300 hover:bg-gray-50">
           <div>
             <a href="#" class="font-bold block text-gray-600">Song Title</a>
             <span class="text-gray-500 text-sm">Artist Name</span>
@@ -98,9 +110,8 @@
             </span>
           </div>
         </li>
-        <li
-          class="flex justify-between items-center p-3 pl-6 cursor-pointer transition duration-300 hover:bg-gray-50"
-        >
+        <li class="flex justify-between items-center p-3 pl-6 cursor-pointer transition 
+          duration-300 hover:bg-gray-50">
           <div>
             <a href="#" class="font-bold block text-gray-600">Song Title</a>
             <span class="text-gray-500 text-sm">Artist Name</span>
@@ -113,9 +124,8 @@
             </span>
           </div>
         </li>
-        <li
-          class="flex justify-between items-center p-3 pl-6 cursor-pointer transition duration-300 hover:bg-gray-50"
-        >
+        <li class="flex justify-between items-center p-3 pl-6 cursor-pointer transition
+          duration-300 hover:bg-gray-50">
           <div>
             <a href="#" class="font-bold block text-gray-600">Song Title</a>
             <span class="text-gray-500 text-sm">Artist Name</span>
@@ -128,9 +138,8 @@
             </span>
           </div>
         </li>
-        <li
-          class="flex justify-between items-center p-3 pl-6 cursor-pointer transition duration-300 hover:bg-gray-50"
-        >
+        <li class="flex justify-between items-center p-3 pl-6 cursor-pointer transition
+          duration-300 hover:bg-gray-50">
           <div>
             <a href="#" class="font-bold block text-gray-600">Song Title</a>
             <span class="text-gray-500 text-sm">Artist Name</span>
@@ -143,9 +152,8 @@
             </span>
           </div>
         </li>
-        <li
-          class="flex justify-between items-center p-3 pl-6 cursor-pointer transition duration-300 hover:bg-gray-50"
-        >
+        <li class="flex justify-between items-center p-3 pl-6 cursor-pointer transition
+          duration-300 hover:bg-gray-50">
           <div>
             <a href="#" class="font-bold block text-gray-600">Song Title</a>
             <span class="text-gray-500 text-sm">Artist Name</span>
@@ -158,9 +166,8 @@
             </span>
           </div>
         </li>
-        <li
-          class="flex justify-between items-center p-3 pl-6 cursor-pointer transition duration-300 hover:bg-gray-50"
-        >
+        <li class="flex justify-between items-center p-3 pl-6 cursor-pointer transition
+          duration-300 hover:bg-gray-50">
           <div>
             <a href="#" class="font-bold block text-gray-600">Song Title</a>
             <span class="text-gray-500 text-sm">Artist Name</span>
@@ -173,9 +180,8 @@
             </span>
           </div>
         </li>
-        <li
-          class="flex justify-between items-center p-3 pl-6 cursor-pointer transition duration-300 hover:bg-gray-50"
-        >
+        <li class="flex justify-between items-center p-3 pl-6 cursor-pointer transition
+          duration-300 hover:bg-gray-50">
           <div>
             <a href="#" class="font-bold block text-gray-600">Song Title</a>
             <span class="text-gray-500 text-sm">Artist Name</span>
@@ -188,9 +194,8 @@
             </span>
           </div>
         </li>
-        <li
-          class="flex justify-between items-center p-3 pl-6 cursor-pointer transition duration-300 hover:bg-gray-50"
-        >
+        <li class="flex justify-between items-center p-3 pl-6 cursor-pointer transition
+          duration-300 hover:bg-gray-50">
           <div>
             <a href="#" class="font-bold block text-gray-600">Song Title</a>
             <span class="text-gray-500 text-sm">Artist Name</span>
@@ -203,9 +208,8 @@
             </span>
           </div>
         </li>
-        <li
-          class="flex justify-between items-center p-3 pl-6 cursor-pointer transition duration-300 hover:bg-gray-50"
-        >
+        <li class="flex justify-between items-center p-3 pl-6 cursor-pointer transition
+          duration-300 hover:bg-gray-50">
           <div>
             <a href="#" class="font-bold block text-gray-600">Song Title</a>
             <span class="text-gray-500 text-sm">Artist Name</span>
@@ -218,9 +222,8 @@
             </span>
           </div>
         </li>
-        <li
-          class="flex justify-between items-center p-3 pl-6 cursor-pointer transition duration-300 hover:bg-gray-50"
-        >
+        <li class="flex justify-between items-center p-3 pl-6 cursor-pointer transition
+          duration-300 hover:bg-gray-50">
           <div>
             <a href="#" class="font-bold block text-gray-600">Song Title</a>
             <span class="text-gray-500 text-sm">Artist Name</span>
@@ -233,9 +236,8 @@
             </span>
           </div>
         </li>
-        <li
-          class="flex justify-between items-center p-3 pl-6 cursor-pointer transition duration-300 hover:bg-gray-50"
-        >
+        <li class="flex justify-between items-center p-3 pl-6 cursor-pointer transition
+          duration-300 hover:bg-gray-50">
           <div>
             <a href="#" class="font-bold block text-gray-600">Song Title</a>
             <span class="text-gray-500 text-sm">Artist Name</span>
@@ -272,17 +274,12 @@
           <span class="song-title">Song Title</span> by
           <span class="song-artist">Artist</span>
         </div>
-        <!-- Scrub Container  -->
         <span class="block w-full h-2 rounded m-1 mt-2 bg-gray-200 relative cursor-pointer">
-          <!-- Player Ball -->
-          <span class="absolute top-neg-8 text-gray-800 text-lg" style="left: 50%">
+          <span class="absolute top-neg-8 text-gray-800 text-lg" style="left: 50%;">
             <i class="fas fa-circle"></i>
           </span>
-          <!-- Player Progress Bar-->
-          <span
-            class="block h-2 rounded bg-gradient-to-r from-green-500 to-green-400"
-            style="width: 50%"
-          ></span>
+          <span class="block h-2 rounded bg-gradient-to-r from-green-500 to-green-400" 
+            style="width: 50%;"></span>
         </span>
       </div>
       <!-- Duration -->
@@ -294,9 +291,8 @@
 
   <!-- Auth Modal -->
   <div class="fixed z-10 inset-0 overflow-y-auto hidden" id="modal">
-    <div
-      class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0"
-    >
+    <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center 
+      sm:block sm:p-0">
       <div class="fixed inset-0 transition-opacity">
         <div class="absolute inset-0 bg-gray-800 opacity-75"></div>
       </div>
@@ -304,9 +300,9 @@
       <!-- This element is to trick the browser into centering the modal contents. -->
       <span class="hidden sm:inline-block sm:align-middle sm:h-screen">&#8203;</span>
 
-      <div
-        class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
-      >
+      <div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden
+        shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
+
         <!-- Add margin if you want to see some of the overlay behind the modal-->
         <div class="py-4 text-left px-6">
           <!--Title-->
@@ -321,14 +317,12 @@
           <!-- Tabs -->
           <ul class="flex flex-wrap mb-4">
             <li class="flex-auto text-center">
-              <a
-                class="block rounded py-3 px-4 transition hover:text-white text-white bg-blue-600"
-                href="#"
-                >Login</a
-              >
+              <a class="block rounded py-3 px-4 transition hover:text-white text-white
+                bg-blue-600" href="#">Login</a>
             </li>
             <li class="flex-auto text-center">
-              <a class="block rounded py-3 px-4 transition" href="#">Register</a>
+              <a class="block rounded py-3 px-4 transition hover:text-blue-600" 
+                href="#">Register</a>
             </li>
           </ul>
 
@@ -337,25 +331,22 @@
             <!-- Email -->
             <div class="mb-3">
               <label class="inline-block mb-2">Email</label>
-              <input
-                type="email"
-                class="block w-full py-1.5 px-3 text-gray-800 border border-gray-300 transition duration-500 focus:outline-none focus:border-black rounded"
-                placeholder="Enter Email"
-              />
+              <input type="email"
+                class="block w-full py-1.5 px-3 text-gray-800 border border-gray-300 transition
+                  duration-500 focus:outline-none focus:border-black rounded"
+                placeholder="Enter Email" />
             </div>
             <!-- Password -->
             <div class="mb-3">
               <label class="inline-block mb-2">Password</label>
-              <input
-                type="password"
-                class="block w-full py-1.5 px-3 text-gray-800 border border-gray-300 transition duration-500 focus:outline-none focus:border-black rounded"
-                placeholder="Password"
-              />
+              <input type="password"
+                class="block w-full py-1.5 px-3 text-gray-800 border border-gray-300 transition
+                  duration-500 focus:outline-none focus:border-black rounded"
+                placeholder="Password" />
             </div>
-            <button
-              type="submit"
-              class="block w-full bg-purple-600 text-white py-1.5 px-3 rounded transition hover:bg-purple-700"
-            >
+            <button type="submit"
+              class="block w-full bg-purple-600 text-white py-1.5 px-3 rounded transition
+                hover:bg-purple-700">
               Submit
             </button>
           </form>
@@ -364,53 +355,48 @@
             <!-- Name -->
             <div class="mb-3">
               <label class="inline-block mb-2">Name</label>
-              <input
-                type="text"
-                class="block w-full py-1.5 px-3 text-gray-800 border border-gray-300 transition duration-500 focus:outline-none focus:border-black rounded"
-                placeholder="Enter Name"
-              />
+              <input type="text"
+                class="block w-full py-1.5 px-3 text-gray-800 border border-gray-300 transition
+                  duration-500 focus:outline-none focus:border-black rounded"
+                placeholder="Enter Name" />
             </div>
             <!-- Email -->
             <div class="mb-3">
               <label class="inline-block mb-2">Email</label>
-              <input
-                type="email"
-                class="block w-full py-1.5 px-3 text-gray-800 border border-gray-300 transition duration-500 focus:outline-none focus:border-black rounded"
-                placeholder="Enter Email"
-              />
+              <input type="email"
+                class="block w-full py-1.5 px-3 text-gray-800 border border-gray-300 transition
+                  duration-500 focus:outline-none focus:border-black rounded"
+                placeholder="Enter Email" />
             </div>
             <!-- Age -->
             <div class="mb-3">
               <label class="inline-block mb-2">Age</label>
-              <input
-                type="number"
-                class="block w-full py-1.5 px-3 text-gray-800 border border-gray-300 transition duration-500 focus:outline-none focus:border-black rounded"
-              />
+              <input type="number"
+                class="block w-full py-1.5 px-3 text-gray-800 border border-gray-300 transition
+                  duration-500 focus:outline-none focus:border-black rounded" />
             </div>
             <!-- Password -->
             <div class="mb-3">
               <label class="inline-block mb-2">Password</label>
-              <input
-                type="password"
-                class="block w-full py-1.5 px-3 text-gray-800 border border-gray-300 transition duration-500 focus:outline-none focus:border-black rounded"
-                placeholder="Password"
-              />
+              <input type="password"
+                class="block w-full py-1.5 px-3 text-gray-800 border border-gray-300 transition
+                  duration-500 focus:outline-none focus:border-black rounded"
+                placeholder="Password" />
             </div>
             <!-- Confirm Password -->
             <div class="mb-3">
               <label class="inline-block mb-2">Confirm Password</label>
-              <input
-                type="password"
-                class="block w-full py-1.5 px-3 text-gray-800 border border-gray-300 transition duration-500 focus:outline-none focus:border-black rounded"
-                placeholder="Confirm Password"
-              />
+              <input type="password"
+                class="block w-full py-1.5 px-3 text-gray-800 border border-gray-300 transition
+                  duration-500 focus:outline-none focus:border-black rounded"
+                placeholder="Confirm Password" />
             </div>
             <!-- Country -->
             <div class="mb-3">
               <label class="inline-block mb-2">Country</label>
               <select
-                class="block w-full py-1.5 px-3 text-gray-800 border border-gray-300 transition duration-500 focus:outline-none focus:border-black rounded"
-              >
+                class="block w-full py-1.5 px-3 text-gray-800 border border-gray-300 transition
+                  duration-500 focus:outline-none focus:border-black rounded">
                 <option value="USA">USA</option>
                 <option value="Mexico">Mexico</option>
                 <option value="Germany">Germany</option>
@@ -421,10 +407,9 @@
               <input type="checkbox" class="w-4 h-4 float-left -ml-6 mt-1 rounded" />
               <label class="inline-block">Accept terms of service</label>
             </div>
-            <button
-              type="submit"
-              class="block w-full bg-purple-600 text-white py-1.5 px-3 rounded transition hover:bg-purple-700"
-            >
+            <button type="submit"
+              class="block w-full bg-purple-600 text-white py-1.5 px-3 rounded transition
+                hover:bg-purple-700">
               Submit
             </button>
           </form>
@@ -432,8 +417,6 @@
       </div>
     </div>
   </div>
-</template>
+</body>
 
-<script>
-export default {}
-</script>
+</html>
